--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -33,7 +33,7 @@ html {
   tab-size: 4; /* 3 */
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; /* 4 */
   font-feature-settings: normal; /* 5 */
-  background-image: url('https://images.unsplash.com/photo-1615715875395-f08956fc5808?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+  background-image: url('https://cdn.pixabay.com/photo/2019/09/14/15/00/blue-4476259_960_720.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
